# holdings

./: pyproject.toml  requirements.txt
data/processed/: test_synth  train_synth  val_synth
notebooks/: test_env_pipe.ipynb
