[tool.poetry]
name = "holdings"
version = "0.1.0"
description = ""
authors = ["Aleksandr Ivanov <alex.iv.vad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
pandas = "^2.0.1"
networkx = "^3.1"
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"
torch-geometric = "^2.3.1"
torch-sparse = "^0.6.17+pt20cpu"
torch-scatter = "^2.1.1+pt20cpu"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://data.pyg.org/whl/torch-2.0.0+cpu.html"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
